トークン更新APIの追加
